# soap-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: Air.wsdl  Air.xsd  AirAbstract.wsdl  Kestrel.xsd  read.rs  read_air.rs  wsdl_etoimik.txt
examples/hello_world/: README.md  hello.wsdl  hello_request.xml  hello_response.xml  main.rs  parsers.rs  types.rs
examples/travel/: AirReqRsp.xsd
examples/travel_light/: README.md  flight_response.xml  main.rs  service.wsdl
examples/weather/: etoimik.wsdl  main.rs
src/: header.rs  lib.rs  request.rs
src/autogen/: types.rs
src/http/: client.rs
src/wsdl/: errors.rs  file.rs  http.rs  mod.rs  schema.rs
